--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- Brushes Section -->
   <div class="brushes">
     <h2 id="first">Brushes</h2>
-    <img src="Style/hacksaw.jpeg"/>
+    <img src="https://content.codecademy.com/courses/freelance-1/unit-2/hacksaw.jpeg"/>
     <h2>Hacksaw brushes</h2>
     <p>Made of the highest quality oak, Hacksaw brushes are known 
         for their weight and ability to hold paint in large amounts. 
@@ -21,7 +21,7 @@
         <!-- Frames Section -->
   <div class="frames">
     <h2 id="first">Frames</h2>
-    <img src="Style/frames.webp"/>
+    <img src="https://content.codecademy.com/courses/freelance-1/unit-2/frames.jpeg"/>
     <h2>Art Frames (assorted)</h2>
     <p>Assorted frames made of different material, including MDF, birchwood, and PDE. 
         Select frames can be sanded and painted according to your needs.</p>
@@ -30,7 +30,7 @@
         <!-- Paint Section -->
   <div class="paint">
     <h2 id="first">Frames</h2>
-    <img src="Style/finnish.jpeg"/>
+    <img src="https://content.codecademy.com/courses/freelance-1/unit-2/finnish.jpeg"/>
     <h2>Clean Finnish Paint</h2>
     <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). 
         Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork.</p>
